@@ -21,6 +21,7 @@ import swp391.SPS.repositories.RoleRepository;
 import swp391.SPS.repositories.UserRepository;
 import swp391.SPS.services.UserService;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -100,13 +101,27 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public void saveUserRole(int userId, String roleName) {
+    public User saveUserRole(int userId, String roleName) throws UserNotFoundException {
         Role role = roleRepository.findByRoleName(roleName);
         User user = new User();
-        if (userRepository.findById(userId).isPresent()){
-            user = userRepository.findById(userId).get();
+        userRepository.findById(userId).orElseThrow(() -> new UserNotFoundException("Not found user"));
+        user = userRepository.findById(userId).get();
+        List<Role> roles = new ArrayList<>();
+        roles.add(role);
+        user.setRoles(roles);
+        return userRepository.save(user);
+    }
+
+    @Override
+    public void saveUserActive(int userId, String status) throws UserNotFoundException {
+        User user = new User();
+        userRepository.findById(userId).orElseThrow(() -> new UserNotFoundException("Not found user"));
+        user = userRepository.findById(userId).get();
+        if (status.equalsIgnoreCase("ACTIVE")) {
+            user.setStatus("INACTIVE");
+        } else {
+            user.setStatus("ACTIVE");
         }
-        user.setRoles(Collections.singletonList(role));
         userRepository.save(user);
     }
 
@@ -117,10 +132,11 @@ public class UserServiceImpl implements UserService {
         user.setUsername(userDto.getUsername());
         user.setPassword(userDto.getPassword());
         Role role = roleRepository.findByRoleName("USER");
-        role.setUsers(Collections.singletonList(user));
-        user.setRoles(Collections.singletonList(role));
+        role.setUsers(List.of(user));
+        user.setRoles(List.of(role));
         Cart cart = new Cart();
         user.setCart(cart);
+        user.setStatus("ACTIVE");
         return userRepository.save(user);
     }
 
